# clear_poc

./: .dockerignore  .env  .env.example  .envrc  .gitignore  Dockerfile  README.md  manage.py  nixpacks.toml  package-lock.json  package.json  pyproject.toml  pytest.ini  railway.toml  setup.sh  titiler_server.py  uwsgi.ini  vercel.json  vite.config.js
alert_framework/: admin.py  api_client.py  api_views.py  apps.py  base_detector.py  deduplication.py  forms.py  models.py  serializers.py  services.py  signal_handlers.py  tasks.py  urls.py  utils.py  views.py
alert_framework/detectors/: dataminr_bert_detector.py  passthrough_detector.py  scoring_detector.py  surge_detector.py  test_detector.py  threshold_detector.py  zscore_detector.py
alert_framework/fixtures/: alert_framework.alerttemplate.json  alert_framework.detector.json  test_detector.json
alert_framework/management/: __init__.py
alert_framework/migrations/: 0001_initial.py  0002_publishedalert.py  0003_remove_detection_unique_detector_timestamp_alert_framework_and_more.py  0004_alerttemplate_detector_type.py  0005_alerttemplate_alert_frame_active_85e637_idx_and_more.py
alert_framework/tests/: __init__.py  test_api_client.py  test_api_views.py  test_bert_detector.py  test_detectors.py  test_models.py  test_scoring_detector.py  test_serializers.py  test_services.py  test_tasks.py  test_utils.py  test_views.py
alerts/: admin.py  api.py  apps.py  cache.py  exceptions.py  forms.py  models.py  serializers.py  signals.py  tasks.py  translation.py  urls.py  utils.py  views.py
alerts/fixtures/: alerts.alert.json  alerts.alert_locations.json  alerts.emailtemplate.json  alerts.shocktype.json  alerts.subscription.json  alerts.subscription_locations.json  alerts.subscription_shock_types.json
alerts/management/: __init__.py
alerts/migrations/: 0001_initial.py  0002_shocktype_color_shocktype_css_class_shocktype_icon.py  0003_emailtemplate.py  0004_add_performance_indexes.py
alerts/services/: __init__.py  notifications.py  (+1 more)
app/: __init__.py  apps.py  asgi.py  celery.py  urls.py  views.py  wsgi.py
dashboard/: admin.py  models.py  urls.py  views.py
data_pipeline/: admin.py  api.py  apps.py  base_source.py  forms.py  models.py  signals.py  tasks.py  translation.py  urls.py  views.py
llm_service/: admin.py  apps.py  cache.py  exceptions.py  models.py  rate_limiter.py  registry.py  service.py  urls.py  views.py
location/: admin.py  apps.py  forms.py  models.py  pipeline_integration.py  tasks.py  translation.py  urls.py  utils.py  views.py
notifications/: admin.py  models.py  urls.py  views.py
task_monitoring/: __init__.py  admin.py  apps.py  log_views.py  logging_handlers.py  models.py  scheduled_views.py  translation.py  urls.py  utils.py  views.py
tests/: README.md  __init__.py
translation/: README.md  __init__.py  admin.py  apps.py  models.py  tests.py  translation.py  urls.py  utils.py  views.py
users/: admin.py  forms.py  models.py  urls.py  views.py
(+300 files in other folders)
